--- a/client/src/components/Carousel/Carousel.css
+++ b/client/src/components/Carousel/Carousel.css
@@ -1,25 +1,19 @@
 .carousel-inner img {
-    -webkit-filter: grayscale(50%);
-    filter: grayscale(70%); /* make all photos black and white */
-    width: 100%; /* Set width to 100% */
-    margin: auto;
-    background-blend-mode: lighten;
+  -webkit-filter: grayscale(50%);
+  filter: grayscale(70%); /* make all photos black and white */
+  width: 100%; /* Set width to 100% */
+  margin: auto;
+  background-blend-mode: lighten;
 }
 .carousel-caption h3 {
-    font-family: 'Roboto Slab', serif;
-    font-size: 30px;
-    font-weight: 600;
-    letter-spacing: 2px;
-    margin-top: 20px;
-   -webkit-text-fill-color: white;
-   -webkit-text-stroke-width: 2px;
-   -webkit-text-stroke-color:black;
+  font-size: 25px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  margin-top: 20px;
+  -webkit-text-fill-color: white;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color:black;
 }
-/* @media (max-width: 600px) {
-  .carousel-caption {
-    display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
-
-
 
 img {
   width: 100%;
@@ -31,3 +25,22 @@ img {
 #myCarousel {
   width:100%;
 }
+
+
+/* 768px or less for tables and phones. */
+@media only screen and (max-width: 768px) {
+  .carousel-caption h3 {
+    font-size: 10px;
+    font-weight: 100;
+    -webkit-text-stroke-width: 1px;
+    
+  }
+  .carousel-inner img{
+    margin-top: 50px;
+  }
+
+}
+
+
+
+
