--- a/client/src/components/Events/Events.css
+++ b/client/src/components/Events/Events.css
@@ -7,15 +7,10 @@ h1{
 }
 
 .thumbnail {
-    padding: 15px;
-    outline-style: solid;
-    outline-color:#2d2d30;
-    outline-width:thick;
-    border: 15px;
+    padding: 20px;
 }
 
 .thumbnail p {
-    margin: 15px 0px 0px 0px;
     color: black;
    
 }
@@ -23,6 +18,7 @@ h1{
 .bg-1 {
     background: #2d2d30;
     color: #bdbdbd;
+
 }
 .bg-1 h3 {color: pink;}
 .bg-1 p {font-style: italic;}
@@ -42,26 +38,22 @@ h1{
     color: #000;
 }
 
-
-.row {
-    float: none;
-    margin: 0 auto;
-}
-.col-sm-2{
-    padding: 0px;
-
-}
-
-
-/* @media only screen and (max-width: 600px) {
+@media only screen and ( max-width: 1200px) {
     .col-sm-2{
-        float: none; 
+        width: 33.3%;
+    }
+    h1{
+        font-size: 25px;
+    }
+}  
+
+@media only screen and (max-width: 767px) {
+    .col-sm-2{
+        width: 50%;
         margin: 0 auto;
-        margin-bottom: 20px;
 
     }
-    .thumbnail{
-        float: none; 
-        margin:0 auto;
+    h1{
+        font-size: 25px;
     }
-} */
+}  
